fixed alignment and gap issues in row configuration

--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,12 @@
         flex-direction: column;
         margin-left: 1rem;
         margin-right: 1rem;
-        gap: 1rem;
+        gap: 3rem;
     }
 
     .weather {
         margin-bottom: 0;
+        margin-left: 0;
     }
 }
 
@@ -56,11 +57,12 @@
         flex-direction: column;
         margin-left: 2rem;
         margin-right: 2rem;
-        gap: 2rem;
+        gap: 3rem;
     }
 
     .weather {
         margin-bottom: 0;
+        margin-left: 0;
     }
 }
 
@@ -75,6 +77,7 @@
 
     .weather {
         margin-bottom: 0;
+        margin-left: 0;
     }
 }
 
@@ -89,6 +92,7 @@
 
     .weather {
         margin-bottom: 0;
+        margin-left: 0;
     }
 }
 
